--- a/css/main.css
+++ b/css/main.css
@@ -143,10 +143,8 @@ body > section,
     background-image: url("bluecode1.png");
     background-size: 100% 100%;
     height: 500px;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
+    padding-top: 8%;
+    padding-bottom: 8%;
 }
 
 @media (max-width: 850px)
@@ -155,10 +153,8 @@ body > section,
         background-image: url("bluecode2.png");
         background-size: 100% 100%;
         height: 500px;
-        padding-top: 0;
-        padding-bottom: 0;
-        padding-left: 0;
-        padding-right: 0;
+        padding-top: 8%;
+        padding-bottom: 8%;
     }
 }
 
@@ -167,11 +163,9 @@ body > section,
     .jumbotron {
         background-image: url("bluecode4.png");
         background-size: 100% 100%;
-        height: 500px;
-        padding-top: 0;
-        padding-bottom: 0;
-        padding-left: 0;
-        padding-right: 0;
+        height: 400px;
+        padding-top: 8%;
+        padding-bottom: 8%;
     }
 }
 
@@ -180,11 +174,9 @@ body > section,
     .jumbotron {
         background-image: url("bluecode4.png");
         background-size: 100% 100%;
-        height: 300px;
-        padding-top: 0;
-        padding-bottom: 0;
-        padding-left: 0;
-        padding-right: 0;
+        height: 400px;
+        padding-top: 8%;
+        padding-bottom: 8%;
     }
 }
 
