--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ body > section,
     background-image: url("bluecode1.png");
     background-size: 100% 100%;
     height: 500px;
-    padding-top: 8%;
+    padding-top: 0;
     padding-bottom: 8%;
 }
 
@@ -153,7 +153,7 @@ body > section,
         background-image: url("bluecode2.png");
         background-size: 100% 100%;
         height: 500px;
-        padding-top: 8%;
+        padding-top: 0;
         padding-bottom: 8%;
     }
 }
