--- a/css/main.css
+++ b/css/main.css
@@ -143,8 +143,10 @@ body > section,
     background-image: url("bluecode5.png");
     background-size: 100% 100%;
     height: 500px;
-    padding-top: 0;
+    padding-top: 2%;
     padding-bottom: 8%;
+    margin-top:1%;
+    margin-bottom:1%;
 }
 
 @media (max-width: 630px)
@@ -153,8 +155,10 @@ body > section,
         background-image: url("bluecode5.png");
         background-size: 100% 100%;
         height: 400px;
-        padding-top: 8%;
-        padding-bottom: 8%;
+        padding-top: 2%;
+    padding-bottom: 8%;
+    margin-top:1%;
+    margin-bottom:1%;
     }
 }
 
@@ -164,8 +168,10 @@ body > section,
         background-image: url("bluecode5.png");
         background-size: 100% 100%;
         height: 400px;
-        padding-top: 8%;
-        padding-bottom: 8%;
+        padding-top: 2%;
+    padding-bottom: 8%;
+    margin-top:1%;
+    margin-bottom:1%;
     }
 }
 
