--- a/css/main.css
+++ b/css/main.css
@@ -143,10 +143,10 @@ body > section,
     background-image: url("bluecode5.png");
     background-size: 100% 100%;
     height: 500px;
-    padding-top: 2%;
-    padding-bottom: 8%;
-    margin-top:1%;
-    margin-bottom:1%;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-top:0;
+    margin-bottom:0;
 }
 
 @media (max-width: 630px)
@@ -155,10 +155,10 @@ body > section,
         background-image: url("bluecode5.png");
         background-size: 100% 100%;
         height: 400px;
-        padding-top: 2%;
-    padding-bottom: 8%;
-    margin-top:1%;
-    margin-bottom:1%;
+        padding-top: 0%;
+    padding-bottom: 0;
+    margin-top:0;
+    margin-bottom:0;
     }
 }
 
@@ -168,10 +168,10 @@ body > section,
         background-image: url("bluecode5.png");
         background-size: 100% 100%;
         height: 400px;
-        padding-top: 2%;
-    padding-bottom: 8%;
-    margin-top:1%;
-    margin-bottom:1%;
+        padding-top: 0%;
+    padding-bottom: 0%;
+    margin-top:0;
+    margin-bottom:0;
     }
 }
 
