--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ body > section,
     background-size: 100% 100%;
     height: 500px;
     padding-top: 0;
-    padding-bottom: 0;
+    padding-bottom: 8%;
     margin-top:0;
     margin-bottom:0;
 }
@@ -154,9 +154,9 @@ body > section,
     .jumbotron {
         background-image: url("bluecode5.png");
         background-size: 100% 100%;
-        height: 450px;
-        padding-top: 0%;
-    padding-bottom: 0;
+        height: 500px;
+        padding-top: 0;
+    padding-bottom: 8%;
     margin-top:0;
     margin-bottom:0;
     }
@@ -167,9 +167,9 @@ body > section,
     .jumbotron {
         background-image: url("bluecode5.png");
         background-size: 100% 100%;
-        height: 450px;
-        padding-top: 0%;
-    padding-bottom: 0%;
+        height: 500px;
+        padding-top: 0;
+    padding-bottom: 8%;
     margin-top:0;
     margin-bottom:0;
     }
