--- a/css/main.css
+++ b/css/main.css
@@ -145,8 +145,8 @@ body > section,
     height: 500px;
     padding-top: 0;
     padding-bottom: 8%;
-    margin-top:0;
-    margin-bottom:0;
+    margin-top:-2%;
+    margin-bottom:8%;
 }
 
 @media (max-width: 630px)
