--- a/css/main.css
+++ b/css/main.css
@@ -143,21 +143,20 @@ body > section,
     background-image: url("bluecode5.png");
     background-size: 100% 100%;
     height: 500px;
-    padding-top: 0;
+    padding-top: 8%;
     padding-bottom: 8%;
 }
 
-/*
-@media (max-width: 630px)
+/*@media (max-width: 630px)
 {
     .jumbotron {
         background-image: url("bluecode5.png");
         background-size: 100% 100%;
         height: 500px;
         padding-top: 0;
-    padding-bottom: 8%;
-    margin-top:0;
-    margin-bottom:0;
+        padding-bottom: 8%;
+        margin-top:0;
+        margin-bottom:0;
     }
 }
 
@@ -168,12 +167,13 @@ body > section,
         background-size: 100% 100%;
         height: 500px;
         padding-top: 0;
-    padding-bottom: 8%;
-    margin-top:0;
-    margin-bottom:0;
+        padding-bottom: 8%;
+        margin-top:0;
+        margin-bottom:0;
     }
 }
 */
+
 #navigation {
   background-color: #00004d/*#600080*/;
   border: 0 none;
