--- a/css/main.css
+++ b/css/main.css
@@ -140,27 +140,24 @@ body > section,
 	Header
 ==========================================*/
 .jumbotron {
-    background-image: url("bluecode5.png");
+    background-image: url("greencode1.png");
     background-size: 100% 100%;
     height: 500px;
     padding-top: 8%;
     padding-bottom: 8%;
 }
 
-/*@media (max-width: 630px)
+@media (max-width: 450px)
 {
-    .jumbotron {
-        background-image: url("bluecode5.png");
-        background-size: 100% 100%;
-        height: 500px;
-        padding-top: 0;
-        padding-bottom: 8%;
-        margin-top:0;
-        margin-bottom:0;
+    background-image: url("greencode1.png");
+    background-size: 100% 100%;
+    height: 400px;
+    padding-top: 8%;
+    padding-bottom: 8%;
     }
 }
 
-@media (max-width: 350px)
+/*@media (max-width: 350px)
 {
     .jumbotron {
         background-image: url("bluecode5.png");
@@ -175,7 +172,7 @@ body > section,
 */
 
 #navigation {
-  background-color: #00004d/*#600080*/;
+  background-color: #00cc99/*#00004d/*#600080*/;
   border: 0 none;
   margin: 0;
   overflow: inherit;
@@ -290,14 +287,14 @@ body > section,
 
 .navbar-nav li.active a {
     background-color: white;
-    color: #00004d;
+    color: #00cc99;/*#00004d;*/
     font-weight: 600;
     font-size: 18px;
 }
 
 .navbar-nav li.onclick a {
     background-color: transparent;
-    color: #0000b3/*#ac00e6*/;
+    color: #66ffd9/*#0000b3/*#ac00e6*/;
     font-weight: 600;
     font-size: 18px;
     border-bottom: transparent;
@@ -305,14 +302,14 @@ body > section,
 
 .navbar-nav li.active:hover a {
     background-color: white;
-    color: #0000b3;
+    color: #66ffd9/*#0000b3*/;
     font-weight: 600;
     font-size: 18px;
     text-decoration:underline;
 }
 
 .navbar-nav li a:hover {
-    background-color: #0000b3;
+    background-color: #66ffd9/*#0000b3*/;
     font-weight: 600;
     font-size: 18px;
     text-decoration:underline;
@@ -441,21 +438,21 @@ body > section,
 
 .mainpage1 {
     font-size: 40px;
-    color: black;
+    color: #00004d;
     padding-left: 10%;
     text-align: left;
 }
 
 .mainpage2{
     font-size: 40px;
-    color: black;
+    color: #00004d;
     padding-right: 10%;
     text-align: right;
 }
 
 .mainpage3{
     font-size: 40px;
-    color: black ;
+    color: #00004d ;
     text-align: center ;
 }
 
@@ -673,13 +670,13 @@ body > section,
 }
 
 .welcome {
-    background-color:#00004d;
+    background-color:#00cc99/*#00004d*/;
     size:20px;
     text-align:center;
 }
 
 .tab2-1 {
-    background-color: #9999ff/*#e0b3ff*/;
+    background-color: #b3ffec/*#9999ff/*#e0b3ff*/;
     float:none;
     height: 160px;
     text-align: left;
@@ -702,7 +699,7 @@ body > section,
 
 
 .tab2-2 {
-    background-color: #9999ff;
+    background-color: #b3ffec/*#9999ff*/;
     float:none;
     text-align: left;
     margin-top: 10px;
@@ -714,7 +711,7 @@ body > section,
 }
 
 .h3-4 {
-    color:#00001a;
+    color:#008060/*#00001a*/;
 }
 
 .tab2-3 {
