--- a/css/main.css
+++ b/css/main.css
@@ -147,17 +147,20 @@ body > section,
     padding-bottom: 8%;
 }
 
-@media (max-width: 450px)
+/*@media (max-width: 630px)
 {
-    background-image: url("greencode1.png");
-    background-size: 100% 100%;
-    height: 400px;
-    padding-top: 8%;
-    padding-bottom: 8%;
+    .jumbotron {
+        background-image: url("bluecode5.png");
+        background-size: 100% 100%;
+        height: 500px;
+        padding-top: 0;
+        padding-bottom: 8%;
+        margin-top:0;
+        margin-bottom:0;
     }
 }
 
-/*@media (max-width: 350px)
+@media (max-width: 350px)
 {
     .jumbotron {
         background-image: url("bluecode5.png");
