--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,16 @@ body > section,
     padding-bottom: 8%;
 }
 
+@media (max-width: 500px) {
+.jumbotron {
+    background-image: url("greencode1.png");
+    background-size: 100% 100%;
+    height: 400px;
+    padding-top: 8%;
+    padding-bottom: 8%;
+}
+}
+
 /*@media (max-width: 630px)
 {
     .jumbotron {
