--- a/css/main.css
+++ b/css/main.css
@@ -210,6 +210,9 @@
 		margin-right:0px;
 	}
 	.jumbotron {
+        background-image: url("Image6.JPG");
+        background-attachment: fixed;
+        background-size: cover;
 		margin-top:10px;
 	}
 }
